<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="18dp">


    <EditText
        android:id="@+id/name"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints="phone"
        android:background="@drawable/edit_text_bg"
        android:digits="0123456789"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/email"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints="surname"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/password"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/purple"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/purple"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:onClick="register"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/login_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="polite"
        android:clickable="true"
        android:contentDescription="@string/login_description"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:onClick="login"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.874"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:clickable="true"
        android:contentDescription="@string/home_description"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:onClick="home"
        android:padding="8dp"
        android:text="@string/home"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>