<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="260dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/user"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="4dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center_vertical|start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_with_margin"

        app:layout_constraintBottom_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,TextViewEdits" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="4dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center_vertical|start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_key_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="172dp"
        android:layout_height="66dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/purple"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"

        android:textColor="@android:color/white"

        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.17"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:clickable="true"
        android:contentDescription="@string/login_description"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:onClick="register"
        android:padding="8dp"
        android:text="@string/register"
        android:textColor="@color/purple"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        tools:ignore="ExtraText,MissingConstraints" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:onClick="home2"
        android:padding="8dp"
        android:text="@string/home"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />


</androidx.constraintlayout.widget.ConstraintLayout>