<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopulationDistributionActivity">


    <ImageView
        android:id="@+id/logout3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="662dp"
        android:contentDescription="@string/historicalPlacesSmall"
        android:onClick="logOut"
        android:src="@drawable/baseline_close_24" />

    <TextView
        android:id="@+id/populationDistribution"
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="none"
        android:clickable="true"
        android:contentDescription="@string/populationDistribution"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/populationDistribution"
        android:textColor="@color/purple"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

    <androidx.cardview.widget.CardView
        android:id="@+id/userTablePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:background="#D8E2DC"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp"
            android:padding="10dp"
            tools:ignore="NestedScrolling" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/adminTablePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"


        app:cardElevation="20dp">

        <RelativeLayout
            android:id="@+id/inputPanel"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/yearText"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"

                android:layout_marginTop="7dp"
                android:autofillHints="none"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4"
                android:padding="15dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple" />

            <EditText
                android:id="@+id/population"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="190dp"
                android:layout_marginTop="7dp"
                android:autofillHints="none"

                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/population"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                tools:ignore="DuplicateIds" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="83dp"
                android:autofillHints="none"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/purple"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/architects_daughter"
                android:onClick="save"
                android:text="@string/add"

                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="105dp"
                android:layout_marginTop="83dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/purple"
                android:clickable="true"
                android:contentDescription="@string/delete"
                android:focusable="true"
                android:fontFamily="@font/architects_daughter"
                android:onClick="delete"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="235dp"
                android:layout_marginTop="83dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/purple"
                android:clickable="true"

                android:focusable="true"
                android:fontFamily="@font/architects_daughter"
                android:onClick="update"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="OnClick" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/home_text_population"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="31dp"
        android:accessibilityLiveRegion="polite"
        android:clickable="true"
        android:contentDescription="@string/home_description"
        android:focusable="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:onClick="home"
        android:padding="8dp"
        android:text="@string/home"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />
</RelativeLayout>